--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "projeto_lista_contatos",
   "version": "1.0.0",
   "description": "projeto lista de contatos",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Ricardo2Silva/projeto-lista_contatos#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "nodemon": "^2.0.2"
   }
 }
