--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Ricardo2Silva/projeto-lista_contatos#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-load": "^1.1.16",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2"
   }
