--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Ricardo2Silva/projeto-lista_contatos#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-load": "^1.1.16",
     "mysql": "^2.18.1",
